--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,4 @@
-*,*::before, *::after {
-    box-sizing: border-box;
-}
-
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
     background-image: url('../pics/crypt.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -20,29 +8,27 @@ body {
 .mainBox {
     width: 800px;
     max-width: 75%;
-    height: 90%;
+    height: 95%;
     background-color: white;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px;
 }
 
-.plain {
-    display: flex;
-    flex-direction: column;
+.boxes {
     background-color: rgb(204, 207, 207);
     border: 2px solid rgb(1, 58, 4);
     height: 30%;
 }
-div.plain > p {
-    text-align: center;
-    font-size: large;
-    color: cornsilk;
-    margin: 5px;
+
+.inputBox{
+    width: 100%;
+}
+input:focus::placeholder {
+    color: transparent;
 }
 
 .buttons {
     background-color: burlywood;
-    margin: 10px;
-    padding: 3px;
 }
+
