--- a/styles/style.css
+++ b/styles/style.css
@@ -10,25 +10,24 @@ body {
     max-width: 75%;
     height: 95%;
     background-color: white;
-    padding: 15px;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px;
 }
 
 .boxes {
     background-color: rgb(204, 207, 207);
-    border: 2px solid rgb(1, 58, 4);
     height: 30%;
 }
 
-.inputBox{
-    width: 100%;
-}
 input:focus::placeholder {
     color: transparent;
 }
 
-.buttons {
-    background-color: burlywood;
+.buttonsBox {
+    background-color: rgb(95, 204, 180);
 }
 
+.borderStyle {
+    border: 2px solid rgb(1, 58, 4);
+    border-radius: 5px;
+}
